--- a/templates/index.html
+++ b/templates/index.html
@@ -55,19 +55,19 @@
 
 		<h2>Company</h2>
 	<div>
-  <select class="location" name="uiCompany" id="uiCompany">
+  <select class="location" name="Company" id="uiCompany">
     <option value="" disabled="disabled" selected="selected">Choose a Company Name</option>
 		<option>BMW</option>
-        <option>TATA</option>
+                <option>TATA</option>
   </select>
 </div>
 
 		<h2>Model</h2>
 	<div>
-  <select class="location" name="" id="uiModel">
+  <select class="location" name="Model" id="uiModel">
     <option value="" disabled="disabled" selected="selected">Choose a Model Name</option>
 		<option>i10</option>
-        <option>Creta</option>
+                <option>Creta</option>
   </select>
 </div>
 	<button class="submit" onclick="onClickedEstimatePrice()" type="button">Estimate Price</button>
