--- a/templates/index.html
+++ b/templates/index.html
@@ -55,7 +55,7 @@
 
 		<h2>Company</h2>
 	<div>
-  <select class="location" name="Company" id="uiCompany">
+  <select class="location" name="company" id="uiCompany">
     <option value="" disabled="disabled" selected="selected">Choose a Company Name</option>
 		<option>BMW</option>
                 <option>TATA</option>
